  * correct HIGHLIGHT reporting when a button is activated
  * method to try-run VM operations, now used for safer chapter skipping and menu jumps
  * fixed detection of current PTT to not assume a 1:1 mapping between PTTs and PGs
  * releasing stills when jumping to menu fixes some state inconsistencies
  * do not assume PGs to be physically layed out in sequence on the disc

libdvdnav (0.1.5) unstable; urgency=low
  * some bugfixes
  * code cleanup
  * build process polishing
  * more sensible event order in get_next_block to ensure useful event delivery
  * VOBU level resume
  * fixed: seeking in a multiangle feature briefly showed the wrong angle

libdvdnav (0.1.4) unstable; urgency=low
  * more read cache improvements
  * minor fixes for some problematic DVDs

libdvdnav (0.1.3-1) unstable; urgency=low
  * Zero-copy read cache.
  * More support for alternative Menu languages.

 -- Rich Wareham <richwareham@users.sourceforge.net> Fri,  2 Aug 2002 08:52:24 +0100

libdvdnav (0.1.2-1) unstable; urgency=low
  * Read Cache changes. Recommended setting for read_cache is OFF.
    Unless one's DVD drive has too small a buffer.
  * Should work with xine 0.9.10 or above.

 -- James Courtier-Dutton <jcdutton@users.sourceforge.net> Sun, 3 Jul 2002 15:30:00 +0000

libdvdnav (0.1.1-1) unstable; urgency=low

  * New upstream version. (closes: #148495)
  * Include TODO
  * Fix config.h problem
  * Threaded cache

 -- Philipp Matthias Hahn <pmhahn@titan.lahn.de>  Sat,  1 Jun 2002 17:47:59 +0200

libdvdnav (0.1.0-2) unstable; urgency=low

  * Add manual page dvdnav-config.1
  * Add bug-presubj on Daniel's request
  * Get dvdnav.c:1.17 from CVS to fix angle support
  * Merge patch from Jamie Wilkinson (#146699)
  * Rerun automake to fix dependencies
  * Ack NMU from siggi
  * Fix include in examples/menus.c

 -- Philipp Hahn <pmhahn@titan.lahn.de>  Thu, 23 May 2002 09:41:15 +0200

libdvdnav (0.1.0-1.1) unstable; urgency=low

  * Prepared for first 'real' release.
  * Bug fixes