@@ -171,6 +171,28 @@ dvdnav_status_t dvdnav_set_readahead_flag(dvdnav_t *self, int use_readahead);
 dvdnav_status_t dvdnav_get_readahead_flag(dvdnav_t *self, int* flag);
 
 /**
+ * Specify whether the positioning works PGC or PG based.
+ * Programs (PGs) on DVDs are similar to Chapters and the program chain (PGC)
+ * usually covers a whole feature. This affects the behaviour of the
+ * functions dvdnav_get_position() and dvdnav_sector_search().
+ * Default is PG based positioning.
+ *
+ * \param self Pointer to dvdnav_t associated with this operation.
+ * \param pgc 0 - PG based, 1 - PGC based
+ */
+dvdnav_status_t dvdnav_set_PGC_positioning_flag(dvdnav_t *self, int pgc);
+
+/**
+ * Query whether positioning is PG or PGC based.
+ *
+ * \param self Pointer to dvdnav_t associated with this operation.
+ * \param flag Pointer to int to recieve flag value.
+ *
+ * \sa dvdnav_set_PGC_positioning_flag()
+ */
+dvdnav_status_t dvdnav_get_PGC_positioning_flag(dvdnav_t *self, int *flag);
+
+/**
  * @}
  */
 
